--- a/.github/use-workflows/use-sync-labels.yml
+++ b/.github/use-workflows/use-sync-labels.yml
@@ -1,6 +1,8 @@
 name: Use Sync Labels Workflow
 
 on:
+  schedule:
+   - cron: '0 0 * * 1' # 00:00 on Monday
   workflow_dispatch: # Allows manual triggering
   # You could also add 'schedule', 'push', etc. triggers if needed
 
@@ -14,3 +16,4 @@ jobs:
     uses: basher83/.github/.github/workflows/sync-labels.yml@main
    # with:
    #   label_definitions_url: "https://raw.githubusercontent.com/basher83/docs/main/mission-control/github-configs/label-definitions.yml" # optional, can omit for default
+
