--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>basher83/.github",
-    "local>basher83/.github:github-actions-security"
+    "local>basher83/renovate-config",
+    "local>basher83/renovate-config:github-actions-security"
   ]
 }
