--- a/.github/use-workflows/use-sync-labels.yml
+++ b/.github/use-workflows/use-sync-labels.yml
@@ -1,19 +1,13 @@
-name: Use Sync Labels Workflow
+name: Sync Labels (shared)
 
 on:
+  # Run manually from the Actions tab
+  workflow_dispatch:
+  # Optional: keep labels fresh automatically
   schedule:
-   - cron: '0 0 * * 1' # 00:00 on Monday
-  workflow_dispatch: # Allows manual triggering
-  # You could also add 'schedule', 'push', etc. triggers if needed
-
-permissions:
-  contents: read
-  issues: write
-  pull-requests: write
+    - cron: '0 0 * * 1' # 00:00 on Monday
 
 jobs:
   sync-labels:
     uses: basher83/.github/.github/workflows/sync-labels.yml@main
-   # with:
-   #   label_definitions_url: "https://raw.githubusercontent.com/basher83/docs/main/mission-control/github-configs/label-definitions.yml" # optional, can omit for default
-
+    # No inputs: uses the default label_definitions_url from the shared workflow
