--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -6,18 +6,26 @@ on:
       label_definitions_url:
         required: false
         type: string
-        default: "https://raw.githubusercontent.com/basher83/docs/main/mission-control/github-configs/label-definitions.yml"
+        default: "https://raw.githubusercontent.com/basher83/.github/main/.github/labels/label-definitions.yml"
 
 jobs:
   sync-labels:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      # contents: read
       issues: write
 
     steps:
+      - name: Random jitter to avoid thundering herd (scheduled runs only)
+        if: github.event_name == 'schedule'
+        run: |
+          # Sleep between 0 and 600 seconds (0 to 10 minutes)
+          JITTER=$(( RANDOM % 600 ))
+          echo "Applying random jitter: ${JITTER}s"
+          sleep "${JITTER}"
+
       - name: Checkout this repository
-        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v4.2.2
 
       - name: Install yq
         run: |
@@ -48,7 +56,7 @@ jobs:
             exit 1
           fi
 
-          # Check if file has expected structure
+          # Check if file has expected structure (at least one top-level key)
           if ! yq eval 'keys | length > 0' label-definitions.yml > /dev/null 2>&1; then
             echo "❌ No label categories found in source file"
             exit 1
@@ -62,16 +70,14 @@ jobs:
         run: |
           echo "Transforming labels for label-syncer..."
 
-          # Transform the nested structure to flat array
+          # Transform nested structure to flat array of labels
           yq eval '[.[] | .[]]' label-definitions.yml > transformed-labels.yml
 
-          # Validate transformed file
           if [[ ! -f transformed-labels.yml ]]; then
             echo "❌ Failed to create transformed labels file"
             exit 1
           fi
 
-          # Check if transformation produced valid results
           label_count=$(yq eval 'length' transformed-labels.yml)
           if [[ $label_count -eq 0 ]]; then
             echo "❌ No labels found after transformation"
@@ -81,18 +87,8 @@ jobs:
           echo "✅ Successfully transformed labels"
           echo "📈 Total labels to sync: $label_count"
 
-          # Show sample of transformed labels (first 5)
-          echo "📋 Sample of labels to be synced:"
+          echo "📋 Sample of labels to be synced (first 5):"
           yq eval '.[0:5] | .[] | "  - " + .name + " (" + .color + ")"' transformed-labels.yml
-
-      - name: Dry run - Show what will be synced
-        run: |
-          echo "🔍 Dry run summary:"
-          echo "Repository: ${{ github.repository }}"
-          echo "Labels will be synced with prune=true (unused labels will be removed)"
-          echo ""
-          echo "Label categories breakdown:"
-          yq eval 'group_by(.description | split(" ") | .[0]) | .[] | "  " + (.[0].description | split(" ") | .[0]) + ": " + (length | tostring) + " labels"' transformed-labels.yml | sort | uniq -c | sed 's/^/  /'
 
       - name: Sync labels to this repository
         uses: micnncim/action-label-syncer@3abd5ab72fda571e69fffd97bd4e0033dd5f495c # v1.3.0
@@ -106,7 +102,7 @@ jobs:
         if: always()
         run: |
           echo "🎉 Label sync completed!"
-          echo "Repository: ${{ github.repository }}"
+          echo "Repository: ${GITHUB_REPOSITORY}"
           echo "Timestamp: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
           echo "Triggered by: ${{ github.actor }}"
           echo ""
